# imp_cpp

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  archmage.json  config-sample.cmake
projects/front/imp_taskmaster/: CMakeLists.txt
projects/front/imp_taskmaster/source/imp_taskmaster/: Configuration.h  Profession_File_Map.h  Project.h  Taskmaster.cpp  Taskmaster.h  config_loader.cpp  config_loader.h  project_loader.cpp  project_loader.h
projects/front/imp_wrapper/: CMakeLists.txt
projects/front/imp_wrapper/source/imp_wrapper/: Global_Bundle.cpp  Global_Bundle.h  Project_Bundle.h  Wrapper.cpp  Wrapper.h  Wrapper_Internal.cpp  Wrapper_Internal.h  project_builder.cpp  project_builder.h
projects/front/imp_wrapper/test/: CMakeLists.txt
projects/front/imp_wrapper/test/output/: Creature.cpp  Creature.h  Game.cpp  Game.h  Pizza.cpp  Pizza.h  World.cpp  World.h  stl.cpp  stl.h
projects/front/imp_wrapper/test/resources/: Pizza.cpp  Pizza.h  pizza.imp
projects/imp_lexical/: CMakeLists.txt
projects/imp_lexical/source/imp_lexical/: Imp_Lexer.cpp  Imp_Lexer.h
projects/imp_lexical/test/: CMakeLists.txt
projects/imp_lexical/test/source/tests/: lexing_test.cpp
projects/imp_mirror/source/imp_mirror/: Mirror.cpp  Mirror.h
projects/imp_mirror/test/: CMakeLists.txt
projects/imp_mirror/test/source/tests/: mirror_test.cpp
projects/imp_overworld/source/overworld/expressions/: Block.h  Expression.h  Flow_Control.h  Literal.h  Minion_Declaration.h  Return.h
projects/imp_overworld/source/overworld/schema/: Dungeon.cpp  Dungeon.h  Function.h  Minion.h  Profession_Library.h  Scope.cpp  Scope.h
projects/imp_underworld/source/underworld/: Underlord.cpp
projects/imp_underworld/source/underworld/expressions/: Block.h  Expression.h  Flow_Control.h  Literal.h  Minion_Declaration.h  Return.h
projects/imp_underworld/source/underworld/schema/: Dungeon.cpp  Dungeon.h  Function.h  Member.h  Minion.h  Portal.h  Profession_Library.cpp  Profession_Library.h  Scope.cpp  Scope.h  exceptions.h  professions.h
projects/lexical/: CMakeLists.txt
projects/lexical/source/lexical/: Lexer.h  Rune.cpp  Rune.h  Whisper.cpp  Whisper.h
projects/model/cpp_stl/: CMakeLists.txt
projects/model/cpp_stl/resources/stl/: Array.imp  enchantments.imp  iostream.imp  vector.imp
projects/model/cpp_stl/source/cpp_stl/: Standard_Library.cpp  Standard_Library.h
projects/model/graphing/: CMakeLists.txt
projects/model/graphing/source/graphing/: Abstract_Graph.h  Connection.h  Generic_Connection.h  Generic_Node.h  Graph.h  Node.h  Owning_Graph.h  Reference_Graph.h
projects/model/imp_graph/: CMakeLists.txt
projects/model/imp_graph/source/imp_overworld_graph/: Node.h  Variable_Node.h
projects/model/imp_mirror/: CMakeLists.txt
projects/model/imp_mirror/source/: Scope.h
projects/model/imp_mirror/source/imp_mirror/: Code_Error.h  Connector.cpp  Connector.h  Element_Map.h  Integrity.cpp  Integrity.h  Mirror.cpp  Mirror.h  Scope.h  Temporary_Interface_Manager.cpp  Temporary_Interface_Manager.h
projects/model/imp_mirror/test/: CMakeLists.txt
projects/model/imp_mirror/test/resources/: pizza.imp
projects/model/imp_overworld/: CMakeLists.txt
projects/model/imp_underworld/: CMakeLists.txt
projects/model/imp_underworld/source/underworld/: Source_Point.h  Underlord.h
projects/model/overworld_exploring/: CMakeLists.txt
projects/model/overworld_exploring/source/overworld_exploring/: Profession_Explorer.cpp  Profession_Explorer.h  Profession_File_Map.h  dependencies.cpp  dependencies.h
projects/model/solving/: CMakeLists.txt
projects/model/solving/source/solving/: Connection.h  Dungeon_Cloner.cpp  Dungeon_Cloner.h  Generic_Solver.h  Node.h  Ownership_Solver.cpp  Ownership_Solver.h  Profession_Solver.cpp  Profession_Solver.h  Solver.cpp  Solver.h  Solving_Visualizer.cpp  Solving_Visualizer.h  solving_types.h
projects/model/standard_library/: CMakeLists.txt
projects/model/standard_library/source/standard_library/: Standard.cpp  Standard.h
projects/parse/cpp_scanning/: CMakeLists.txt
projects/parse/cpp_scanning/source/: Header_Scanner.cpp  Header_Scanner.h  Stream.h
projects/parse/cpp_scanning/source/cpp_scanning/: Context.h  Dungeon_Map.h  Header_Parser.cpp  Header_Parser.h  Header_Scanner.cpp  Header_Scanner.h  Parser_Lookup.cpp  Parser_Lookup.h
projects/parse/cpp_scanning/source/schema/: Class.h  Function.h
projects/parse/cpp_scanning/test/: CMakeLists.txt
projects/parse/imp_summoning/: CMakeLists.txt
projects/parse/imp_summoning/test/: CMakeLists.txt
projects/parse/runic/: CMakeLists.txt
projects/parse/runic/source/runic/: Lexer.h  Match.h  (+8 more)
projects/parse/runic_common/: CMakeLists.txt
projects/parse/runic_cpp/: CMakeLists.txt
projects/parse/runic_imp/: CMakeLists.txt
projects/parse/runic_imp/test/: CMakeLists.txt
projects/parse/source_mapping/: CMakeLists.txt
projects/parsing/: CMakeLists.txt
projects/parsing/source/parsing/: Parser.h
projects/render/imp_artisan/: CMakeLists.txt
projects/render/imp_rendering/: CMakeLists.txt
projects/runic/: CMakeLists.txt
projects/runic/source/runic/: File_Text_Source.h  Lexer.h  Match.h  Rune.h  Rune_Stream.h  Whisper.h
projects/runic_cpp/source/runic_cpp/: matching.h
projects/runic_imp/source/runic_imp/: Imp_Lexer.cpp  Imp_Lexer.h  Lexicon.cpp  Lexicon.h  Token.h  Whisper.h  matching.h
projects/runic_imp/test/: CMakeLists.txt
projects/summoning/: CMakeLists.txt
projects/summoning/source/summoning/: Base_Summoner.cpp  Base_Summoner.h  Context.h  Expression_Summoner.cpp  Expression_Summoner.h  Summoner.cpp  Summoner.h  exceptions.h
projects/summoning/test/: CMakeLists.txt
(+292 files in other folders)
